# default_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: Ccache.cmake  CommonCompileFlags.cmake  ConanInstall.cmake  FindSphinx.cmake  StaticAnalyser.cmake
conan/: conanfile.txt
doc/: CMakeLists.txt  conf.py.in  index.rst
include/: docs_example.h  func.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/main/: CMakeLists.txt  main.cpp
